--- a/app/src/main/res/layout/fragment_book_list.xml
+++ b/app/src/main/res/layout/fragment_book_list.xml
@@ -4,8 +4,10 @@
 
     <data>
 
+        <variable
+            name="state"
+            type="com.example.core.domain.BookSearchUIState" />
     </data>
-
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -20,6 +22,13 @@
             android:text="Book List"
             android:textAlignment="center"
             android:textSize="26sp" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -46,14 +55,39 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_weight="1"
-                android:text="Nav" />
+                android:text="Search" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/responseKind"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{`Kind: ` + state.apiResponse.kind}" />
+
+            <TextView
+                android:id="@+id/responseCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{`Count: ` + state.apiResponse.totalItems}" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:text="@{state.apiResponse.items.toString()}"
+            android:layout_height="wrap_content" />
+
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginTop="16dp"
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
