--- a/app/src/main/res/layout/fragment_book_list.xml
+++ b/app/src/main/res/layout/fragment_book_list.xml
@@ -79,8 +79,9 @@
 
         <TextView
             android:id="@+id/text"
+            android:visibility="gone"
             android:layout_width="wrap_content"
-            android:text="@{state.apiResponse.items.toString()}"
+            android:text="{state.apiResponse.items.toString()}"
             android:layout_height="wrap_content" />
 
         <androidx.recyclerview.widget.RecyclerView
